Add search/edit visibility to cli/gui